     * Fixed bug #19519: UtBS doubled Black Hand dialog
     * Fix appearance of flood on wooden boards
 * Language and i18n:
   * Fixed two untranslatable strings in the "new" MP lobby
   * Fixed an untranslatable string in the Multiplayer Commands help topic
   * Updated translations: French, Galician, German, Italian, Korean,
     Portuguese (Brazil), Russian, Slovak, Spanish
 * WML engine:
   * Fixed bug #19498: [modify_unit] duplicating units if x,y changed
 * Miscellaneous and bug fixes:
   * Made the Wolf raise its head if and only if it is submerged
   * Fix bug #19505: broken stone bridge transitions

Version 1.10.1:
 * Add-ons server:
   * Reject add-ons with names or titles that begin with a WML text format
     markup character (any of *, `, ~, {, ^, }, |, @, #, <, &)
 * Campaigns:
   * Son of the Black Eye:
     * Removed Al'Brock and Flar'Tar death as defeat condition in objectives in
       Civil War
   * Tutorial:
     * Fixed bug #19316: Narrator messages are now translated.
     * Replacd $unit.type by $unit.language_name to make a string completely
       translateable.
   * Under the Burning Suns:
     * Made it so that Kaleh gets the default AMLA after he's been fully
       upgraded
 * Language and i18n:
   * New translation: Ukrainian
   * Updated translations: British English, Chinese (Simplified), Dutch,
     Finnish, French, Galician, German, Hungarian, Indonesian, Irish, Italian,
     Latin, Norwegian, Old English, Polish, Portuguese (Brazil), Serbian,
     Spanish
 * Multiplayer:
   * Fix an accidental terrain type change in Isar's Cross
   * Fix attacker side being human in 6p_Team_Survival (bug #19400)
 * Music and sound effects:
   * Replaced some of the wolf hit sounds with lower-pitched ones
 * User interface:
   * Fixed excessive idle CPU usage in story screens without story text
   * Made add-ons with markup characters at the start of their titles
     display normally in the add-ons management dialogs (e.g. without colors)