@@ -8,6 +8,8 @@ Version 1.10.1+svn:
    * Fixed an untranslatable string in the Multiplayer Commands help topic
    * Updated translations: French, Galician, German, Italian, Korean,
      Portuguese (Brazil), Russian, Slovak, Spanish
+ * Multiplayer:
+   * Ignore Pango markup in map descriptions (bug #19210)
  * WML engine:
    * Fixed bug #19498: [modify_unit] duplicating units if x,y changed
  * Miscellaneous and bug fixes:
